# voodootracker

./: AUTHORS  HACKING  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  acconfig.h  aclocal.m4  autogen.sh  config.cache  config.h  config.h.in  config.status  configure  configure.in  voodoo.spec  voodoo.spec.in
app/: Makefile  Makefile.am  Makefile.in  audio.c  audio.h  driver.h  endian-conv.h  envelope-box.c  envelope-box.h  gtkspinbutton.c  gtkspinbutton.h  gui-subs.c  gui-subs.h  gui.c  gui.h  instrument-editor.c  instrument-editor.c.diff  instrument-editor.h  instrument-editor.h.diff  main.c  main.h  mixer.h  mixer.xpm  module-info.c  module-info.h  notekeys.c  notekeys.h  poll.c  poll.h  preferences.c  preferences.h  recode.c  recode.h  sample-display.c  sample-display.h  sample-editor.c  sample-editor.c.diff  sample-editor.h  scope-group.c  scope-group.h  (+12 more)
app/.deps/: audio.P  envelope-box.P  gtkspinbutton.P  gui-subs.P  gui.P  instrument-editor.P  main.P  module-info.P  notekeys.P  poll.P  preferences.P  recode.P  sample-display.P  sample-editor.P  scope-group.P  st-subs.P  track-editor.P  tracker.P  xm-player.P  xm.P
app/drivers/: Makefile  Makefile.am  Makefile.in  oss.c
app/drivers/.deps/: oss.P
app/mixers/: Makefile  Makefile.am  Makefile.in  lqmono.c
app/mixers/.deps/: lqmono.P
macros/: Makefile  Makefile.in
